# ai-engineering-monorepo

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  PROGRESS.md  README.md  SKILLS.md  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json
.claude/: settings.json
.claude/commands/: README.md  quick-review.md  wp-research.md
.claude/coordination/: README.md  claude.local.md  codex.local.md
.claude/hooks/: ruff-format-on-save.sh
.claude/skills/: claude-code-practices.md  generate-linkedin-post.md
.claude/skills/agent-development/: SKILL.md
.claude/skills/claude-code-practices/: SKILL.md
.claude/skills/gemini-analysis/: SKILL.md
.claude/skills/generate-linkedin-post/: SKILL.md
.claude/skills/landing-page-copy-optimizer/: SKILL.md
.claude/skills/landing-page-prompt-generator/: SKILL.md
.claude/skills/review-pr/: SKILL.md
.claude/skills/scaffold-py-lib/: SKILL.md
.claude/skills/vc-product-partner/: SKILL.md
.github/workflows/: ci-python.yaml  deploy-docs.yaml
apps/alpha-whale/: README.md  project.json  pyproject.toml
apps/alpha-whale/agent/: __init__.py  chain.py  config.py  evaluate.py  graph.py  models.py  state.py  tools.py
apps/alpha-whale/api/: config.py  dependencies.py  main.py  models.py  routes.py
apps/alpha-whale/api/tests/: conftest.py  test_routes.py
apps/alpha-whale/ingestion/: __main__.py  alpha_vantage.py  bronze.py  config.py  massive.py  pipeline.py  schemas.py  stochastic.py  supabase_client.py
apps/alpha-whale/ingestion/rag/: __init__.py  chunking.py  edgar.py  indexing.py  pipeline.py
apps/alpha-whale/tests/: test_api_routes.py  test_evaluate.py  test_graph.py  test_ingestion.py  test_massive.py  test_models.py  test_pipeline.py  test_rag_chunking.py  test_rag_indexing.py  test_rag_pipeline.py  test_rag_retrieval.py  test_rag_tool.py  test_stochastic.py  test_tools.py
apps/alpha-whale/web/: next.config.ts  package.json  project.json  tsconfig.tsbuildinfo
apps/alpha-whale/web/app/: globals.css  layout.tsx  page.tsx
apps/alpha-whale/web/components/: chat-panel.tsx  comparison-card.tsx  indicators-card.tsx  pill-nav.tsx  stock-data-card.tsx  tradingview-chart.tsx
apps/alpha-whale/web/lib/: sse-client.ts
docs/: index.md  project.json
docs/architecture/: data-contracts.md  decisions.md  overview.md
docs/getting-started/: development.md  installation.md
docs/infrastructure/: ci-cd.md  docker.md
docs/libraries/: py-core.md
docs/plans/: 2026-02-26-wp004-replit-integration.md
docs/stylesheets/: extra.css
infra/: docker-compose.yml
infra/docker/: node.Dockerfile  python.Dockerfile
libs/py-core/: README.md  project.json  pyproject.toml
libs/py-core/src/py_core/: __init__.py  async_utils.py  extraction.py  observability.py  redis_client.py
libs/py-core/src/py_core/config/: __init__.py  settings.py
libs/py-core/src/py_core/exceptions/: __init__.py  base.py
libs/py-core/src/py_core/logging/: __init__.py  logger.py
libs/py-core/tests/: __init__.py  test_async_utils.py  test_config.py  test_exceptions.py  test_extraction.py  test_logging.py  test_observability.py  test_redis_client.py
libs/py-retrieval/: README.md  project.json  pyproject.toml
libs/py-retrieval/src/py_retrieval/: __init__.py  embeddings.py  exceptions.py  factory.py  models.py  pinecone_store.py  protocols.py
libs/py-retrieval/tests/: test_embeddings.py  test_factory.py  test_pinecone_store.py  test_retrieval_models.py
overrides/: home.html
tools/: gemini-analyze.sh
tools/github_import/: README.md  cli.py  importer.py  models.py  run_import.py  work_packages.json
