[project]
name = "ai-engineering-monorepo"
version = "0.1.0"
description = "Enterprise-grade AI Engineering Monorepo"
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
name = "ai-engineering-monorepo"
version = "0.1.0"
description = "Enterprise-grade AI Engineering Monorepo"
authors = ["Humberto Lomeu <hcslomeu@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
py-core = { path = "libs/py-core", develop = true }

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.0"
pytest-cov = "^4.1"
pytest-asyncio = "^0.23"

# Linting & Formatting
ruff = "^0.4"
mypy = "^1.10"

# Security scanning
bandit = "^1.7"

# Documentation
mkdocs-material = "^9.5"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["libs", "apps", "pipelines"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["py_core", "py_agents", "py_retrieval", "py_streaming"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["libs", "apps", "pipelines", "tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.bandit]
exclude_dirs = ["tests", "node_modules", ".venv"]
skips = ["B101"]  # Allow assert statements in tests

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"