[project]
name = "ai-engineering-monorepo"
version = "0.1.0"
description = "Enterprise-grade AI Engineering Monorepo"
readme = "README.md"
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["libs/*", "apps/*"]

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    # Linting & Formatting
    "ruff>=0.4",
    "mypy>=1.10",
    # Security scanning
    "bandit>=1.7",
    # Documentation
    "mkdocs-material>=9.5",
    "types-requests>=2.32",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["libs", "apps", "pipelines"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "UP047",  # use PEP 695 type params (TODO: refactor when ready)
]

[tool.ruff.lint.isort]
known-first-party = ["py_core", "py_agents", "py_retrieval", "py_streaming", "agent", "ingestion", "api"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["libs", "apps", "pipelines", "tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.bandit]
exclude_dirs = ["tests", "node_modules", ".venv"]
skips = ["B101"]  # Allow assert statements in tests