[project]
name = "alpha-whale"
version = "0.1.0"
description = "AlphaWhale — AI-powered finance agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langgraph>=1.0",
    "google-cloud-bigquery>=3.25",
    "langsmith>=0.7",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.0",
    "requests>=2.32",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34",
    "sse-starlette>=2.0",
    "py-core",
]

[tool.uv]
package = true

[tool.uv.sources]
py-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "ingestion", "api"]
