[project]
name = "py-core"
version = "0.1.0"
description = "Core utilities, logging, and configuration for AI Engineering Monorepo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "httpx>=0.28",
    "tenacity>=9.0",
    "redis>=5.0",
    "instructor>=1.0",
    "openai>=1.0",
]

[tool.uv]
package = true

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/py_core"]
