[project]
name = "py-retrieval"
version = "0.1.0"
description = "Provider-agnostic vector store abstraction with Pinecone implementation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "py-core",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pinecone>=5.0",
    "openai>=1.0",
    "tenacity>=9.0",
]

[tool.uv]
package = true

[tool.uv.sources]
py-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/py_retrieval"]